tests/miniJava/neg/005286_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] while java ( ) { return 0 ; } }
